--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server/index.js"
+    "start": "nodemon server/index.js"
   },
   "keywords": [],
   "author": "",
