--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "browser-image-compression": "^2.0.2",
     "dotenv": "^16.4.5",
     "google-map-react": "^2.2.1",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-places-autocomplete": "^7.3.0",
