--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^18.3.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.25.1",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^10.0.6",
     "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
