--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "browser-image-compression": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -13,6 +14,8 @@
     "multer": "^1.4.5-lts.1",
     "react-places-autocomplete": "^7.3.0",
     "socket.io": "^4.8.0",
+    "stripe": "^17.3.1",
+    "uuid": "^11.0.3",
     "ws": "^8.18.0"
   },
   "scripts": {
